--- a/_TEMPLATES_/shop/login.html
+++ b/_TEMPLATES_/shop/login.html
@@ -8,14 +8,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0" />
     <title>e-Railseva</title>
 
-    <link rel="stylesheet" href="http://ecell.in/cr/user/css/main.css">
-    <script src="http://ecell.in/cr/user/js/vendor/modernizr-2.6.2.min.js"></script>
+    <link rel="stylesheet" href="{% static 'shop/css/main.css' %}">
+    <script src="{% static 'shop/js/vendor/modernizr-2.6.2.min.js' %}"></script>
 
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link href='https://fonts.googleapis.com/css?family=Roboto+Condensed:300,700,400,500,600' rel='stylesheet' type='text/css'>
     <link href="{% static 'shop/css/materialize.css' %}" type="text/css" rel="stylesheet" media="screen,projection" />
 
-    <link href="http://ecell.in/cr/user/css/index.css" type="text/css" rel="stylesheet" media="screen,projection" />
+    <link href="{% static 'shop/css/index.css' %}" type="text/css" rel="stylesheet" media="screen,projection" />
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <style>
 
@@ -87,7 +87,7 @@
 
   <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
   <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
-    <script src="http://ecell.in/cr/user/js/materialize.js"></script>
+    <script src="{% static 'shop/js/materialize.js' %}"></script>
     <script type="text/javascript">
 
     $('#form1').submit(function(e)
@@ -143,9 +143,9 @@
 
 
     <script>
-        window.jQuery || document.write('<script src="http://ecell.in/cr/user/js/vendor/jquery-1.9.1.min.js"><\/script>')
+        window.jQuery || document.write('<script src="{% static 'shop/js/vendor/jquery-1.9.1.min.js' %}"><\/script>')
     </script>
-    <script src="http://ecell.in/cr/user/js/main.js"></script>
+    <script src="{% static 'shop/js/main.js' %}"></script>
    <!-- chartist -->
     <script type="text/javascript" src="http://demo.geekslabs.com/materialize/v3.1/js/plugins/jquery-validation/jquery.validate.min.js"></script>
     <script type="text/javascript" src="http://demo.geekslabs.com/materialize/v3.1/js/plugins/jquery-validation/additional-methods.min.js"></script>
