--- a/_TEMPLATES_/shop/login.html
+++ b/_TEMPLATES_/shop/login.html
@@ -93,22 +93,23 @@
     $('#form1').submit(function(e)
     {
         e.preventDefault();
+        $('#msg').html('Waiting For Response...');
         $.ajax({
             type: 'POST',
             url: '/shop/login/',
             data: $("#form1").serialize(),
             success: function(response) {
-                    if(response.status == '1')
-                    {
-                        window.location.href = '/shop/home/';
-                    }
-                    else if(response.status == '2'){
-                        $('#msg').html("<a class='color:blue;'><b>INVALID CREDENTIALS</b></a>");
-                    }
-                    else if(response.status == '3'){
-                        $('#msg').html("<a class='color:blue;'><b>Error Occured !! Login Again </b></a>");
-                    }
+                if(response.status == '1')
+                {
+                    window.location.href = '/shop/home/';
                 }
+                else if(response.status == '2'){
+                    $('#msg').html("<a class='color:blue;'><b>INVALID CREDENTIALS</b></a>");
+                }
+                else if(response.status == '3'){
+                    $('#msg').html("<a class='color:blue;'><b>Error Occured !! Login Again </b></a>");
+                }
+            }
         });
     });
 
@@ -136,22 +137,15 @@
         });
     </script>
     <script>
-        $.validate({
-            lang: 'en'
-        });
-    </script>
-
-
-    <script>
         window.jQuery || document.write('<script src="{% static 'shop/js/vendor/jquery-1.9.1.min.js' %}"><\/script>')
     </script>
     <script src="{% static 'shop/js/main.js' %}"></script>
    <!-- chartist -->
-    <script type="text/javascript" src="http://demo.geekslabs.com/materialize/v3.1/js/plugins/jquery-validation/jquery.validate.min.js"></script>
-    <script type="text/javascript" src="http://demo.geekslabs.com/materialize/v3.1/js/plugins/jquery-validation/additional-methods.min.js"></script>
+    <script type="text/javascript" src="{% static 'shop/js/vendor/jquery.validate.min.js' %}"></script>
+    <script type="text/javascript" src="{% static 'shop/js/vendor/additional-methods.min.js' %}"></script>
 
     <script type="text/javascript">
- $("#form1").validate({
+    $("#form1").validate({
         rules: {
             username: {
                 required: true,
@@ -177,7 +171,6 @@
         errorPlacement: function(error, element) {
           var placement = $(element).data('error');
           if (placement) {
-            // $(placement).append(error)
             error.insertAfter(element);
           } else {
             error.insertAfter(element);
