--- a/_TEMPLATES_/shop/register.html
+++ b/_TEMPLATES_/shop/register.html
@@ -8,14 +8,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0" />
     <title>e-Railseva</title>
 
-    <link rel="stylesheet" href="http://ecell.in/cr/user/css/main.css">
-    <script src="http://ecell.in/cr/user/js/vendor/modernizr-2.6.2.min.js"></script>
+    <link rel="stylesheet" href="{% static 'shop/css/main.css' %}">
+    <script src="{% static 'shop/js/vendor/modernizr-2.6.2.min.js' %}"></script>
 
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link href='https://fonts.googleapis.com/css?family=Roboto+Condensed:300,700,400,500,600' rel='stylesheet' type='text/css'>
     <link href="{% static 'shop/css/materialize.css' %}" type="text/css" rel="stylesheet" media="screen,projection" />
 
-    <link href="http://ecell.in/cr/user/css/index.css" type="text/css" rel="stylesheet" media="screen,projection" />
+    <link href="{% static 'shop/css/index.css' %}" type="text/css" rel="stylesheet" media="screen,projection" />
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <style>
 
@@ -46,7 +46,7 @@
 
     <div align="center">
 
-        <div class="col s1 z-depth-6 card-panel" style="width:30%;margin-top:5%;background-color:#fff;padding:20px;text-align:center;" align="center">
+        <div class="col s1 z-depth-6 card-panel" style="width:30%;min-width: 500px;margin-top:5%;background-color:#fff;padding:20px;padding-right:2%;text-align:center;" align="center">
             <h1 style="color:black;"> e-RailSeva</h1>
 
             <form id="form1" novalidate="novalidate" class="col s12" enctype='application/json' method="POST" action="">
@@ -59,18 +59,19 @@
                 </div>
                 <div class="row ">
                     <div class="input-field col s12">
-                        <i class="mdi-action-wallet-travel prefix"></i>
-                        <input id="station_name" name="station_name" type="text" class="validate" class="validate" required="" aria-required="true">
-                        <label for="station_name" class="center-align">Station Name</label>
-                    </div>
-                </div>
-                <div class="row ">
-                    <div class="input-field col s12">
                         <i class="mdi-action-shopping-cart prefix"></i>
                         <input id="shop_name" type="text" name="shop_name" class="validate" class="validate" required="" aria-required="true">
                         <label for="shop_name" class="center-align">Shop Name</label>
                     </div>
                 </div>
+                <div class="row ">
+                    <div class="input-field col s12">
+                        <i class="mdi-action-wallet-travel prefix"></i>
+                        <input id="station_name" name="station_name" type="text" class="validate" class="validate" required="" aria-required="true">
+                        <input id="station_id" name="station_id" type="hidden">
+                        <label for="station_name" class="center-align">Station Name</label>
+                    </div>
+                </div>                
                 <div class="row ">
                     <div class="input-field col s12">
                         <i class="mdi-action-lock-outline prefix"></i>
@@ -86,12 +87,12 @@
                     </div>
                 </div>
 
-                                <div id="msg"></div>
-
-                <div class="row">
-                <button class="btn waves-effect waves-light" align="center" style="margin-left:auto;margin-right:auto;display:block;margin-bottom:0%" type="submit" name="action">Register
+                <button id="submitbutton" class="btn waves-effect waves-light" align="center" style="margin-left:auto;margin-right:auto;display:block;margin-bottom:0%" type="button" name="action">Register
                 <i class="material-icons right">send</i>
                 </button><br>
+                <div id="msg" style="color:rbg(33,150,243,1);font-weight:400;"></div>
+
+                <div class="row">
                     <div class="input-field col s12">
                         <p class=" center medium-small sign-up">Already have an account? <a href="/shop/login">Login</a></p>
                     </div>
@@ -108,64 +109,10 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
 
-  <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
-  <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
-    <script src="http://ecell.in/cr/user/js/materialize.js"></script>
+    <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
+    <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+    <script src="{% static 'shop/js/materialize.js' %}"></script>
     <script type="text/javascript">
-
-//     $(function() {
-//   $("#shop_name").autocomplete({
-//     source: "/shop/station_names/",
-//     minLength: 2,
-//   });
-// });
-
-
-
-    $(document).on('submit', '#form1', function(){
-            $.ajax({ 
-                type: $(this).attr('method'), 
-                url: this.action, 
-                data: $(this).serialize(),
-                context: this,
-                success: function(data, status) {
-                    if(data.success){
-                        location.reload();
-                    }
-                    else{
-                        alert(data.Error);
-                    }
-                }
-            });
-            return false;
-        });
- 
-    // $('#form1').submit(function(e)
-    // {
-    //     e.preventDefault();
-    //     $.ajax({
-    //         type: 'POST',
-    //         url: '/shop/register/',
-    //         dataType: "json",
-    //         data: $("#form1").serialize(),
-    //         success: function(response) {
-    //             alert("bitch");
-    //             if(response.status == 1)
-    //                 {
-    //                     window.location.href = '/shop/login';
-    //                 }
-    //                 if(response.status == 2){
-    //                     $('#msg').html("<a style='color:#f44336'><b>INVALID CREDENTIALS</b></a>");
-    //                 }
-    //                 if(response.status == 3){
-    //                     $('#msg').html("<a style='color:#f44336'><b>Error Occured !! Login Again </b></a>");
-    //                 }
-    //             }
-    //     });
-    // });
-
-
-
         $(document).ready(function() {
             // the "href" attribute of .modal-trigger must specify the modal ID that wants to be triggered
             $('.modal-trigger').leanModal();
@@ -187,23 +134,17 @@
             $('select').material_select();
         });
     </script>
-    <script>
-        $.validate({
-            lang: 'en'
-        });
-    </script>
-
 
     <script>
-        window.jQuery || document.write('<script src="http://ecell.in/cr/user/js/vendor/jquery-1.9.1.min.js"><\/script>')
+        window.jQuery || document.write('<script src="{% static 'shop/js/vendor/jquery-1.9.1.min.js' %}"><\/script>');
     </script>
-    <script src="http://ecell.in/cr/user/js/main.js"></script>
+    <script src="{% static 'shop/js/main.js' %}"></script>
    <!-- chartist -->
-    <script type="text/javascript" src="http://demo.geekslabs.com/materialize/v3.1/js/plugins/jquery-validation/jquery.validate.min.js"></script>
-    <script type="text/javascript" src="http://demo.geekslabs.com/materialize/v3.1/js/plugins/jquery-validation/additional-methods.min.js"></script>
+    <script type="text/javascript" src="{% static 'shop/js/vendor/jquery.validate.min.js' %}"></script>
+    <script type="text/javascript" src="{% static 'shop/js/vendor/additional-methods.min.js' %}"></script>
 
     <script type="text/javascript">
- $("#form1").validate({
+    $("#form1").validate({
         rules: {
             username: {
                 required: true,
@@ -234,20 +175,76 @@
                 minlength: "Password should be atleast 5 characters"
             },
             password_again:{
-                equalto: "bothe should be euqal"
+                equalto: "Passwords Do Mot Match"
             }
         },
         errorElement : 'div',
         errorPlacement: function(error, element) {
-          var placement = $(element).data('error');
-          if (placement) {
-            // $(placement).append(error)
-            error.insertAfter(element);
-          } else {
-            error.insertAfter(element);
-          }
+            var placement = $(element).data('error');
+            if (placement) {
+                error.insertAfter(element);
+            } else {
+                error.insertAfter(element);
+            }
         }
-     });
+        });
+    </script>
+
+    <link rel='stylesheet' href='https://code.jquery.com/ui/1.12.0/themes/base/jquery-ui.css'>
+    <script type="text/javascript">
+        var ac_source = [], stns = [];
+        $.ajax({
+            type: 'GET',
+            url: '/shop/getallstations/',
+            success: function(response) {
+                if(response.status)
+                {
+                    stns = response.stations;
+                    for(var i = 0; i < stns.length; ++i)
+                    {
+                        var jsn = {};
+                        jsn.label = stns[i].name;
+                        jsn.value = stns[i].name;
+                        jsn.sid = stns[i].id;
+                        ac_source.push(jsn);
+                    }
+                    $("#station_name").autocomplete({
+                        source: ac_source,
+                        select : function(event, ui){
+                            $("#station_name").val(ui.item.value);
+                            $("#station_id").val(ui.item.sid);
+                            return false;
+                        }
+                    });
+                }
+            }
+        });
+        $('#submitbutton').click(function(){
+            var stid = $("#station_id").val(), stname = $("#station_name").val();
+            var found = false;
+            for(var i = 0; i < stns.length; ++i)
+            {
+                if(stns[i].id == stid && stns[i].name == stname)
+                {
+                    found = true;
+                    break;
+                }
+            }
+            if(!found)
+            {
+                $("#msg").html("<a class='color:blue;'><b>Choose a Station from Available Stations</b></a>");
+                return;
+            }
+            $('#msg').html('Waiting For Response...');
+            $.ajax({
+                type: 'POST',
+                url: '/shop/register/',
+                data: $("#form1").serialize(),
+                success: function(response) {
+                    $('#msg').html(response.msg);
+                }
+            });
+        });
     </script>
 
 </body>
