shop home done except status change

--- a/_TEMPLATES_/shop/login.html
+++ b/_TEMPLATES_/shop/login.html
@@ -93,7 +93,7 @@
     $('#form1').submit(function(e)
     {
         e.preventDefault();
-        $('#msg').html('Waiting For Response...');
+        $('#msg').html('<a class="color:blue;"><b>Waiting For Response...</b></a>');
         $.ajax({
             type: 'POST',
             url: '/shop/login/',
