--- a/_TEMPLATES_/shop/home.html
+++ b/_TEMPLATES_/shop/home.html
@@ -45,9 +45,9 @@
         <div class="nav-wrapper hide-on-small-only">
                 <a href="" class="brand-logo" style="padding-left:10px;">e-RailSeva</a>
                 <ul class="right" style="margin-right:20px;">
-                  <li><a href=""  class="waves-effect waves-light"><b>Update Menu</b></a></li>
-                  <li><a href=""  class="waves-effect waves-light"><b>Reviews</b></a></li>
-                  <li><a href=""  class="waves-effect waves-light"><b>logout</b></a></li>
+                  <li><a href="/shop/getmenu/"  class="waves-effect waves-light"><b>Update Menu</b></a></li>
+                  <li><a href="/shop/reviews/"  class="waves-effect waves-light"><b>Reviews</b></a></li>
+                  <li><a href="/shop/logout/"  class="waves-effect waves-light"><b>logout</b></a></li>
                 </ul>
         </div>
     </nav>
