--- a/_TEMPLATES_/shop/review.html
+++ b/_TEMPLATES_/shop/review.html
@@ -45,9 +45,9 @@
         <div class="nav-wrapper hide-on-small-only">
                 <a href="" class="brand-logo" style="padding-left:10px;">e-RailSeva</a>
                 <ul class="right" style="margin-right:20px;">
-                  <li><a href=""  class="waves-effect waves-light"><b>Update Menu</b></a></li>
-                  <li><a href=""  class="waves-effect waves-light"><b>Reviews</b></a></li>
-                  <li><a href=""  class="waves-effect waves-light"><b>logout</b></a></li>
+                  <li><a href="/shop/home/"  class="waves-effect waves-light"><b>Orders</b></a></li>
+                  <li><a href="/shop/getmenu/"  class="waves-effect waves-light"><b>Update Menu</b></a></li>
+                  <li><a href="/shop/logout/"  class="waves-effect waves-light"><b>logout</b></a></li>
                 </ul>
         </div>
     </nav>
@@ -57,6 +57,8 @@
     
     <div style="width:100%;">
       <h2 align="center" id="shop_name" style="color:#26a69a"></h2>  
+      <div align="right" style="margin-right:50px;font-size:30px;color:green;">Rating : {{ rating }}/10.0</div> 
+
 
 
     <table style="width:90%;">
