--- a/_TEMPLATES_/shop/home.html
+++ b/_TEMPLATES_/shop/home.html
@@ -25,14 +25,14 @@
 <body>
 
 
-<!-- <div id="loader-wrapper">
+<div id="loader-wrapper">
       <div id="loader"></div>
 
       <div class="loader-section section-left"></div>
             <div class="loader-section section-right"></div>
 
     </div>
- -->
+
 
 <script>
  function showToast(message, duration){
