Deleted login and register loading pages

--- a/_TEMPLATES_/shop/register.html
+++ b/_TEMPLATES_/shop/register.html
@@ -30,13 +30,13 @@
 
 <body class="blue">
 
-        <div id="loader-wrapper">
+ <!--        <div id="loader-wrapper">
         <div id="loader"></div>
 
         <div class="loader-section section-left"></div>
         <div class="loader-section section-right"></div>
 
-    </div>
+    </div> -->
 
     <script>
         function showToast(message, duration) {
