--- a/_TEMPLATES_/shop/login.html
+++ b/_TEMPLATES_/shop/login.html
@@ -29,13 +29,13 @@
 
 <body class="red">
     
-    <div id="loader-wrapper">
+<!--     <div id="loader-wrapper">
         <div id="loader"></div>
 
         <div class="loader-section section-left"></div>
         <div class="loader-section section-right"></div>
 
-    </div>
+    </div> -->
 
     <script>
         function showToast(message, duration) {
